<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Configuración"
        android:textColor="@color/black"
        android:fontFamily="@font/lexend"
        android:textStyle="bold"
        android:textSize="26dp"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/contenido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintBottom_toTopOf="@id/buttonLogout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewUserIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/icono"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/nombreUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textColor="@color/black"
            android:fontFamily="@font/lexend"
            android:textSize="21dp"
            android:layout_marginBottom="25dp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/buttonUserSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:textColor="@color/black"
            android:fontFamily="@font/lexend"
            android:backgroundTint="@color/fondo_cuadro"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/buttonPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiarcontra"
            android:backgroundTint="@color/fondo_cuadro"
            android:textColor="@color/black"
            android:fontFamily="@font/lexend"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/buttondispositivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/fondo_cuadro"
            android:text="@string/textodisp"
            android:textColor="@color/black"
            android:fontFamily="@font/lexend"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/buttonhabitos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fondo_cuadro"
            android:text="@string/textohabi"
            android:textColor="@color/black"
            android:fontFamily="@font/lexend"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/cerrarsesion"
        android:textColor="@color/white"
        android:fontFamily="@font/lexend"
        app:layout_constraintBottom_toTopOf="@id/barraNavegacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintTop_toBottomOf="@+id/contenido" />

    <LinearLayout
        android:id="@+id/barraNavegacion"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnVentanaHabitos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/hogar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend"
                android:text="Habitos"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnVentanaConfiguracion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ajustesicon"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend"
                android:layout_height="wrap_content"
                android:text="Configuracion"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
