<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.UserViews.usuarioconfig">


    <FrameLayout
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar perfil"
            android:textColor="@color/txt_grey"
            android:textSize="18sp"
            android:layout_gravity="center"/>
        <ImageButton
            android:id="@+id/atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/vector___0"

            android:layout_marginEnd="20dp"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </FrameLayout>

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend"
        android:text="@string/Nombre"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nombreedit"
        app:layout_constraintStart_toStartOf="@+id/nombreedit"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="1" />

    <EditText
        android:id="@+id/nombreedit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gris"
        android:hint="@string/Nombre"
        android:fontFamily="@font/lexend"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:textColor="@color/gris2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Apellido"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/lexend"
        app:layout_constraintBottom_toTopOf="@+id/apellidoedit"
        app:layout_constraintEnd_toEndOf="@+id/nombre"
        app:layout_constraintStart_toStartOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/nombreedit" />


    <EditText
        android:id="@+id/apellidoedit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gris"
        android:hint="@string/Apellido"
        android:autofillHints="name"
        android:fontFamily="@font/lexend"
        android:inputType="textPersonName"
        android:textColor="@color/gris2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/lexend"
        app:layout_constraintStart_toStartOf="@+id/apellido"
        app:layout_constraintTop_toBottomOf="@+id/apellidoedit" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/gris2"
        android:fontFamily="@font/lexend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/apellidoedit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/actualizar"
        android:fontFamily="@font/lexend"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

</androidx.constraintlayout.widget.ConstraintLayout>